--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 		"php": ">=7.1.0",
 		"ext-pdo": "*",
 		"ext-tokenizer": "*",
-		"symfony/console": "~3.0|~4.0"
+		"symfony/console": "~3.0|~4.0|~5.0"
 	},
 	"autoload": {
 		"classmap": [
